{
    "name": "ShipInputActions",
    "maps": [
        {
            "name": "Ship",
            "id": "c86f434d-f202-48b1-b4a3-7521fd7218d2",
            "actions": [
                {
                    "name": "MoveForward",
                    "type": "Button",
                    "id": "fb5aa88f-9f80-49a4-b403-7dbde5757314",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Rotate",
                    "type": "Button",
                    "id": "fd7ed20c-3304-407f-af40-ff5c8ee04e91",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "BulletFire",
                    "type": "Button",
                    "id": "ba49cc46-3dad-4904-8800-4ba0e9bfb2ff",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LaserFire",
                    "type": "Button",
                    "id": "38f24735-7fec-4654-a425-26c6d9807c29",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "76b5f16d-577a-4246-83fd-5869c6860803",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveForward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Direction",
                    "id": "45b8a075-9b4f-417e-9d60-8bd15be2cfbf",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "05eae4dc-286d-4db8-95b9-70605713ec7a",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "c3fc4253-d257-4dc1-9051-7b7e260b5cf4",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "ddea8bc5-88c1-4345-a6a4-bd12e9ba0fb3",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BulletFire",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b4d93439-cdf3-4d3e-a814-f8532461ffb3",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LaserFire",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}